--- a/.github/workflows/second.yml
+++ b/.github/workflows/second.yml
@@ -16,7 +16,7 @@ on:
 jobs:
     check_version_updated:
         runs-on: ubuntu-latest
-        if: ${{ github.event.workflow_run.conclusion == 'success' }}
+        # if: ${{ github.event.workflow_run.conclusion == 'success' }}
         steps:
             -   name: Checkout the PR branch
                 uses: actions/checkout@v4
