--- a/.github/workflows/second.yml
+++ b/.github/workflows/second.yml
@@ -9,6 +9,7 @@ on:
           - opened
           - synchronize
           - reopened
+          - edited
     workflow_run:
         workflows: ["First workflow"]
         types: ["completed"]
@@ -18,6 +19,9 @@ jobs:
         runs-on: ubuntu-latest
         # if: ${{ github.event.workflow_run.conclusion == 'success' }}
         steps:
+            -   name: Log it
+                run: |
+                  echo ${{ github.event.workflow_run.conclusion }}
             -   name: Checkout the PR branch
                 uses: actions/checkout@v4
                 with:
