--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -3,17 +3,17 @@ name: First workflow
 on:
     pull_request:
         branches: ["**"]
-    types:
-      - opened
-      - synchronize
-      - reopened
-      - edited
+        types:
+            - opened
+            - synchronize
+            - reopened
+            - edited
 jobs:
     first-job:
         runs-on: ubuntu-latest
-
         steps:
             -   name: Console log
                 run: echo "Hello, world!"
-            -    name: Sleep for 10 secs
-                run: sleep 5
+            -   name: Sleep for 10 secs
+                run: |
+                  sleep 5
