--- a/.github/workflows/second.yml
+++ b/.github/workflows/second.yml
@@ -1,23 +1,15 @@
 name: check_if_version_updated
 
 on:
-    pull_request:
-        branches:
-          - main
-          - staging
-        types:
-          - opened
-          - synchronize
-          - reopened
-          - edited
     workflow_run:
         workflows: ["First workflow"]
         types: ["completed"]
+        branches: ["staging", "main"]
 
 jobs:
     check_version_updated:
         runs-on: ubuntu-latest
-        # if: ${{ github.event.workflow_run.conclusion == 'success' }}
+        if: ${{ github.event.workflow_run.conclusion == 'success' }}
         steps:
             -   name: Log it
                 run: |
