--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -17,3 +17,6 @@ jobs:
             -   name: Sleep for 10 secs
                 run: |
                   sleep 5
+    second-job:
+        uses: ./.github/workflows/second.yml
+        needs: first-job
