--- a/.github/workflows/second.yml
+++ b/.github/workflows/second.yml
@@ -1,18 +1,12 @@
 name: check_if_version_updated
 
 on:
-    workflow_run:
-        workflows: ["First workflow"]
-        types: ["completed"]
+    workflow_call:
 
 jobs:
     check_version_updated:
         runs-on: ubuntu-latest
-        if: ${{ github.event.workflow_run.conclusion == 'success' }}
         steps:
-            -   name: Log it
-                run: |
-                  echo ${{ github.event.workflow_run.conclusion }}
             -   name: Checkout the PR branch
                 uses: actions/checkout@v4
                 with:
