--- a/.github/workflows/third.yaml
+++ b/.github/workflows/third.yaml
@@ -1,15 +1,18 @@
 name: Third workflow
 
 on:
-    workflow_run:
-        workflows: [check_if_version_updated]
-        types: [completed]
+    pull_request:
+        branches:
+            - staging
+            - main
+        types:
+          - closed
 
 jobs:
     build:
-        # if: ${{ github.event.workflow_run.conclusion=='success' }}
+        if: ${{ github.event.pull_request.merged == true }}
         runs-on: ubuntu-latest
         steps:
             -   name: "After the second workflow"
                 run: |
-                    echo "After the first workflow HEllo world ${{ github.event.workflow_run.conclusion }}"
+                    echo "After the first workflow HEllo world"
